# OS-lab1

code/: CMakeLists.txt  exec.c  exec.h  lsh.c  parse.h
docs/: report.md
